add goals ini update class
